2007-04-11  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, parsecmd.cc: use Buffer for cmd_buf;
	  use xstring where needed; fix FIXME in WriteCmds and ReadCmds;
	* buffer.cc, buffer.h: make Get const; (Prepend) new method.
	* MirrorJob.cc, MirrorJob.h, PatternSet.cc, PatternSet.h,
	  PtyShell.cc, PtyShell.h, commands.cc, lftp_ssl.cc, lftp_ssl.h:
	  use xstring.
	* ArgV.h: (CombineCmd) new method.
	* CmdExec.cc, CmdExec.h, CopyJob.cc, CopyJob.h, DummyProto.cc,
	  DummyProto.h, FileCopy.cc, FileCopy.h, FileGlob.cc, FileGlob.h,
	  Filter.cc, Filter.h, FindJob.cc, FindJob.h, FindJobDu.cc,
	  FindJobDu.h, Fish.cc, FtpDirList.cc, FtpDirList.h, GetFileInfo.cc,
	  GetFileInfo.h, GetJob.cc, GetJob.h, LocalDir.cc, LocalDir.h,
	  PtyShell.cc, alias.cc, alias.h, bookmark.cc, bookmark.h, commands.cc,
	  complete.cc, ftpclass.cc, history.cc, history.h, lftp.cc,
	  mgetJob.cc, mgetJob.h: use xstring.
	* lftp_rl.c, lftp_rl.h: const in filename_dequoting_function.
	* resource.cc: const mismatch.
	* GetPass.cc, GetPass.h: use file descriptor instead of FILE;
	  use xstring; return const char*.
	* ColumnOutput.cc, ColumnOutput.h: use StringSet, xstring.
	* xstring.cc, xstring.h: (chomp, rtrim) new methods.

2007-04-09  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.h: (eq, ne, xstring0::length) new methods.
	* OutputJob.cc, OutputJob.h: use xstring.

2007-04-06  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: allow truncate on unset xstrings; change
	  truncate_at so that it works on binary strings.
	* FileSetOutput.cc, FileSetOutput.h, commands.cc: use xstring;
	  disable FileSetOutput cloning and assignment.
	* xstring.h: (xstring_ca) new class for allocated strings.
	* FileSetOutput.cc, SFtp.cc: use it.
	* CmdExec.cc, CmdExec.h: use xstring; make unquote return result length.
	* QueueFeeder.cc, QueueFeeder.h, StatusLine.cc: use xstring.
	* SleepJob.cc: use xstring_ca.
	* CmdExec.cc: don't add extra \001 for readline prompt.
